--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -41,7 +41,7 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="navbar-brand" href="#">Shafa Najwa</a>
+        <span class="navbar-brand mb-0 h1">Shafa Najwa</span>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
