--- a/wishlist/templates/wishlist_ajax.html
+++ b/wishlist/templates/wishlist_ajax.html
@@ -38,7 +38,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'wishlist:show_wishlist' %}">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <span class="navbar-brand mb-0 h1">Shafa Najwa</span>
@@ -55,7 +55,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Buy New Items</a>
+        <a class="nav-link" href="{% url 'wishlist:show_ajax' %}" tabindex="-1" >Buy New Items</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
