--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -55,7 +55,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Buy New Items</a>
+        <a class="nav-link" href="{% url 'wishlist:show_ajax' %}" tabindex="-1" >Buy New Items</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
